<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="key_0">0</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_rev_sign">+/-</string>
    <string name="key_dot">.</string>
    <string name="key_enter">Enter</string>
    <string name="key_back">←</string>
    <string name="key_more">More</string>
    <string name="opr_dialog_title">More operators...</string>
    <string name="app_name">RPNCal</string>
    <string name="msg_too_few_args">Too few arguments</string>
    <string name="msg_div_by_zero">Division by zero</string>
    <string name="msg_root_of_negative">Root of negative</string>
    <string name="msg_log_of_non_positive">Logarithm of non-positive</string>
    <string name="msg_arg_out_of_range">Argument out of range</string>
    <string name="opr_add">+</string>
    <string name="opr_sub">-</string>
    <string name="opr_mul">×</string>
    <string name="opr_div">÷</string>
    <string name="opr_inv">1/x</string>
    <string name="opr_sqrt">√x</string>
    <string name="opr_sqr">x<sup><small>2</small></sup></string>
    <string name="opr_pow">y<sup><small>x</small></sup></string>
    <string name="opr_nroot"><sup><small>x</small></sup>√y</string>
    <string name="opr_exp">e<sup><small>x</small></sup></string>
    <string name="opr_log">ln</string>
    <string name="opr_exp10">10<sup><small>x</small></sup></string>
    <string name="opr_log10">log</string>
    <string name="opr_pi">π</string>
    <string name="opr_sin">sin</string>
    <string name="opr_cos">cos</string>
    <string name="opr_tan">tan</string>
    <string name="opr_asin">asin</string>
    <string name="opr_acos">acos</string>
    <string name="opr_atan">atan</string>
    <string name="thousand_char">,</string>
</resources>
